# pyproject_to_sphinx

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.fr.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml  source-distribution.yml
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst
docs/source/en/: index.rst
docs/source/fr/: index.rst
docs/source/global/: code_example.py
pyproject_to_sphinx/: pyproject_parser.py
tests/: test_pyproject_parser.py
tests/fixtures/ApacheLicense2.0/: LICENSE
tests/fixtures/BSD2ClauseSimplifiedLicense/: LICENSE
tests/fixtures/BSD3ClauseClearLicense/: LICENSE
tests/fixtures/BSD3ClauseNeworRevisedLicense/: LICENSE
tests/fixtures/BSD4ClauseOriginalorOldLicense/: LICENSE
tests/fixtures/BSDZeroClauseLicense/: LICENSE
tests/fixtures/GNUAfferoGeneralPublicLicensev3.0/: LICENSE
tests/fixtures/GNUGeneralPublicLicensev3.0/: LICENSE
tests/fixtures/MIT/: LICENSE  LICENSE.txt
